# danim-backend

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  commit_template.txt  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  task.yml  일정관리.md  작업-공유.md
.github/workflows/: build-dev.yml  build.yml  ci.yml  deploy-dev.yml  deploy.yml
apps/comments/: pagination.py  urls.py
apps/comments/migrations/: 0001_initial.py  0002_remove_comment_updated_at.py  0003_remove_commentlike_updated_at_comment_updated_at.py  0004_comment_post_comment_comment_post_id_e3a913_idx.py
apps/comments/models/: __init__.py  models.py
apps/comments/schemas/: __init__.py  comment_like_schemas.py  comment_schema.py  create_schema.py
apps/comments/serializers/: __init__.py  comment_like_serializer.py  serializers.py
apps/comments/services/: __init__.py  services.py
apps/comments/views/: __init__.py  views.py
apps/core/: authentication.py  models.py
apps/core/exceptions/: exception.py  exception_handler.py
apps/core/utils/: base62.py  pagination.py  ulid.py
apps/directmessages/: apps.py  urls.py
apps/directmessages/migrations/: 0001_initial.py
apps/directmessages/models/: __init__.py  models.py
apps/directmessages/schemas/: conversation_create_schema.py
apps/directmessages/serializers/: conversation_create_serializer.py
apps/directmessages/services/: conversation_create_service.py
apps/directmessages/views/: conversation_create_views.py
apps/follows/: apps.py  urls.py
apps/follows/migrations/: 0001_initial.py
apps/notifications/: urls.py
apps/posts/: bookmark_model.py  models.py  urls.py
apps/users/: redis_keys.py  urls.py  validators.py
config/: asgi.py  urls.py
config/settings/: base.py  dev.py  local.py  prod.py
envs/: .env.example
nginx/: nginx.conf  nginx.dev.conf
tests/core/: base.py
(+206 files in other folders)
