[project]
name = "danim-backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "django>=5.0",
    "djangorestframework>=3.15",
    "djangorestframework-simplejwt>=5.3",
    "django-allauth>=65.0",
    "dj-rest-auth>=7.0",
    "django-storages[s3]>=1.14",
    "boto3>=1.34",
    "django-cors-headers>=4.3",
    "django-redis>=5.4",
    "Pillow>=10.3",
    "django-environ>=0.11",
    "drf-spectacular>=0.27",
    "psycopg2-binary>=2.9",
    "gunicorn>=22.0",
]
